# buddhasay

./: .gitignore  Cargo.toml  Makefile  README.md  buildspec.yml
resources/: buddhasay.toml
src/: main.rs
