[package]

name = "buddhasay"
version = "0.3.0"
authors = ["Luis Rodrigues Soares <luis@luisonthekeyboard.com>"]

edition = "2018"

description = "Like cowsay, but with a Buddha."

homepage = "https://github.com/luisonthekeyboard/buddhasay"
repository = "https://github.com/luisonthekeyboard/buddhasay"

readme = "README.md"

keywords = ["buddhasay", "buddha", "motd"]
categories = ["command-line-utilities"]

license = "Apache-2.0"

[dependencies]
rand = "0.6.2"